# omniClaw

./: .gitignore  AGENTS.md  README.md  alembic.ini  audit_findings.md  litellm_config.yaml  main.py  notatki.txt  pyproject.toml
.codex/commands/: explore_next_milestone.md
alembic/: env.py
alembic/versions/: 20260301_0001_m02_canonical_state.py  20260301_0002_m04_node_runtime_tracking.py  20260301_0003_m04_line_manager_and_plain_password.py  20260303_0004_m04_gateway_runtime_state.py  20260303_0005_m05_message_ledger_metadata.py  20260303_0006_m06_forms_state_machine_registry.py  20260303_0007_m06_message_workflow_simplify.py  2ac348055579_m09_budget_features.py  (+10 more)
docs/: OmniClaw PRD.md  company-workspace-requirements.md  current-task.md  documentation.md  early OmniClaw PRD.md  implement.md  nanobot-monorepo-internalization-openspec-plan.md  plan.md  prompt.md  universal_company_systems_→_agentic_translation.md
openspec/: config.yaml
tests/: helpers.py  test_budgets_actions.py  test_company_workspaces.py  test_forms_actions.py  test_healthz.py  test_instructions_actions.py  test_ipc_actions.py  test_litellm_runtime.py  test_nanobot_prompt_logging.py  test_nanobot_skill_wrappers.py  test_provisioning_actions.py  test_retry_policy.py  test_retry_repository.py  test_runtime_actions.py  test_runtime_integration.py  test_runtime_retry_scheduler.py  test_runtime_scripts.py  test_schema_repository.py  test_skills_actions.py  test_system_adapter_helper.py  test_usage_actions.py  test_usage_scripts.py
workspace/: README.md  company_config.json  company_models.yaml
(+478 files in other folders)
