[project]
name = "omniclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.1",
    "nanobot-ai",
    "PyYAML>=6.0,<7.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
omniclaw = "omniclaw.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniclaw"]

[tool.hatch.build.targets.sdist]
include = [
    "src/omniclaw/",
    "README.md",
    "main.py",
    "alembic/",
    "alembic.ini",
]

[tool.uv.sources]
nanobot-ai = { path = "third_party/nanobot" }

[tool.pytest.ini_options]
testpaths = ["tests"]
